src/objects/Apttus_Config2__CollaborationRequest__c.object
<CustomObject>
    <description>This object will persist information for quote collaboration tasks and will be used to relate the parent configurations and its related child configurations.</description>
    <fields>
        <fullName>Apttus_Config2__BillToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the bill to account</description>
        <inlineHelpText>ID of the bill to account</inlineHelpText>
        <label>Bill To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DC Orders (Bill To)</relationshipLabel>
        <relationshipName>DCOrdersBillTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__BillingPreferenceId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated billing preference</description>
        <inlineHelpText>ID of the associated billing preference</inlineHelpText>
        <label>Billing Preference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Apttus_Config2__BillingPreference__c.Apttus_Config2__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>Please select a billing preference</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Apttus_Config2__BillingPreference__c</referenceTo>
        <relationshipLabel>DC Orders</relationshipLabel>
        <relationshipName>DCOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ChildConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The child configuration associated with this collaboration task.</description>
        <inlineHelpText>The child configuration associated with this collaboration task.</inlineHelpText>
        <label>Child Product Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipName>Collaboration_TasksChild</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CollaborationType__c</fullName>
        <description>Specifies what type of collaboration this request is created for.</description>
        <inlineHelpText>Specifies what type of collaboration this request is created for.</inlineHelpText>
        <label>Collaboration Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Peer-To-Peer</fullName>
                    <default>true</default>
                    <label>Peer-To-Peer</label>
                </value>
                <value>
                    <fullName>Multi-Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__CompletionDueDate__c</fullName>
        <description>The date by which the child configuration should be completed and submitted for merging.</description>
        <inlineHelpText>The date by which the child configuration should be completed and submitted for merging.</inlineHelpText>
        <label>Completion Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigurationEffectiveDate__c</fullName>
        <description>The configuration effective date</description>
        <inlineHelpText>The configuration effective date</inlineHelpText>
        <label>Configuration Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ConfigureProducts__c</fullName>
        <formula>IF( ($User.Id == OwnerId &amp;&amp; ! (ISPICKVAL(Apttus_Config2__Status__c, &quot;Cancelled&quot;) || ISPICKVAL(Apttus_Config2__Status__c, &quot;Deleted&quot;) || ISPICKVAL(Apttus_Config2__Status__c, &quot;Abandoned&quot;))),
        HYPERLINK(&quot;/apex/Apttus_Config2__CollabRequestInline?id=&quot;&amp;Id&amp;&quot;&amp;flow=ngcpq&quot; , IMAGE(&quot;/resource/Apttus_Config2__Button_Configure&quot;, &quot;Configure Products&quot;),&quot;_self&quot;),
        NULL
        )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Configure Products</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Description__c</fullName>
        <description>The order description</description>
        <inlineHelpText>The order description</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__IsParentCartVisible__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Specifies whether the collaborator gets read-only access to the parent cart</description>
        <inlineHelpText>Specifies whether the collaborator gets read-only access to the parent cart</inlineHelpText>
        <label>Grant Access to Merge Cart (Read Only)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LegalEntityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the legal entity associated with the order. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</description>
        <inlineHelpText>ID of the legal entity associated with the order. This links the asset to a legal entity and will be used for downstream billing and revenue functions.</inlineHelpText>
        <label>Legal Entity</label>
        <referenceTo>Apttus_Config2__LegalEntity__c</referenceTo>
        <relationshipLabel>DC Orders</relationshipLabel>
        <relationshipName>DCOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__LocationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated account location</description>
        <inlineHelpText>ID of the associated account location</inlineHelpText>
        <label>Location</label>
        <referenceTo>Apttus_Config2__AccountLocation__c</referenceTo>
        <relationshipLabel>DC Orders</relationshipLabel>
        <relationshipName>DCOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderDate__c</fullName>
        <description>The order date</description>
        <inlineHelpText>The order date</inlineHelpText>
        <label>Order Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderEndDate__c</fullName>
        <description>The date at which the order ends</description>
        <inlineHelpText>The date at which the order ends</inlineHelpText>
        <label>Order End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__OrderStartDate__c</fullName>
        <description>The date at which the order becomes effective</description>
        <inlineHelpText>The date at which the order becomes effective</inlineHelpText>
        <label>Order Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PODate__c</fullName>
        <description>The purchase order date</description>
        <inlineHelpText>The purchase order date</inlineHelpText>
        <label>PO Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PONumber__c</fullName>
        <description>The purchase order number</description>
        <inlineHelpText>The purchase order number</inlineHelpText>
        <label>PO Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentBusinessObjectId__c</fullName>
        <description>Id of the parent business object</description>
        <inlineHelpText>Id of the parent business object</inlineHelpText>
        <label>Parent Business Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentBusinessObjectType__c</fullName>
        <description>Type of the parent business object.</description>
        <inlineHelpText>Type of the parent business object.</inlineHelpText>
        <label>Parent Business Object Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agreement</fullName>
                </value>
                <value>
                    <fullName>Proposal</fullName>
                </value>
                <value>
                    <fullName>Order</fullName>
                </value>
                <value>
                    <fullName>Collaboration Request</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentConfigRequestId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the Config Request record of Parent Cart</description>
        <inlineHelpText>Lookup to the Config Request record of Parent Cart</inlineHelpText>
        <label>Parent Config Request Id</label>
        <referenceTo>Apttus_Config2__TempObject__c</referenceTo>
        <relationshipLabel>Collaboration Requests</relationshipLabel>
        <relationshipName>CollaborationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ParentConfigurationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent configuration for which this collaboration task is created.</description>
        <inlineHelpText>Enter the parent configuration id</inlineHelpText>
        <label>Parent Configuration</label>
        <referenceTo>Apttus_Config2__ProductConfiguration__c</referenceTo>
        <relationshipName>Collaboration_Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PaymentTermId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the payment term associated with the order</description>
        <inlineHelpText>ID of the payment term associated with the order</inlineHelpText>
        <label>Payment Term</label>
        <referenceTo>Apttus_Config2__PaymentTerm__c</referenceTo>
        <relationshipLabel>DC Orders</relationshipLabel>
        <relationshipName>DCOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PriceListId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated price list</description>
        <inlineHelpText>ID of the associated price list</inlineHelpText>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Collaboration Requests</relationshipLabel>
        <relationshipName>CollaborationRequests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PricingDate__c</fullName>
        <description>The pricing date. The product list price is determined based on this date.</description>
        <inlineHelpText>The pricing date. The product list price is determined based on this date.</inlineHelpText>
        <label>Pricing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PrimaryContactId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the primary contact associated with the order</description>
        <inlineHelpText>ID of the primary contact associated with the order</inlineHelpText>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>DC Orders</relationshipLabel>
        <relationshipName>DCOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Priority__c</fullName>
        <description>Holds the priority of the task, P1 being highest priority and P5 being lowest.</description>
        <inlineHelpText>Priority of the task, P1 being highest priority and P5 being lowest.</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>P1</fullName>
                </value>
                <value>
                    <fullName>P2</fullName>
                </value>
                <value>
                    <fullName>P3</fullName>
                </value>
                <value>
                    <fullName>P4</fullName>
                </value>
                <value>
                    <fullName>P5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PurchaseId__c</fullName>
        <description>The default purchase identifier associated with the order</description>
        <externalId>true</externalId>
        <inlineHelpText>The default purchase identifier associated with the order</inlineHelpText>
        <label>Purchase Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__PurchaseOrderId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated purchase order</description>
        <inlineHelpText>ID of the associated purchase order</inlineHelpText>
        <label>Purchase Order</label>
        <referenceTo>Apttus_Config2__CustomerPurchaseOrder__c</referenceTo>
        <relationshipLabel>DC Orders</relationshipLabel>
        <relationshipName>DCOrders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReadyForActivationDate__c</fullName>
        <description>The date the order is ready for activation. The order is activated on this date.</description>
        <inlineHelpText>The date the order is ready for activation. The order is activated on this date.</inlineHelpText>
        <label>Ready For Activation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReadyForBillingDate__c</fullName>
        <description>The date when the order is ready for billing. The billing schedules are created on this date.</description>
        <inlineHelpText>The date when the order is ready for billing. The billing schedules are created on this date.</inlineHelpText>
        <label>Ready For Billing Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ReadyForRevRecDate__c</fullName>
        <description>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</description>
        <inlineHelpText>The date when the order is ready for revenue recognition. The revenue schedules are created on this date.</inlineHelpText>
        <label>Ready For Revenue Recognition Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__RelatedOpportunityId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the related opportunity</description>
        <inlineHelpText>ID of the related opportunity</inlineHelpText>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>DC Quotes</relationshipLabel>
        <relationshipName>DCQuotes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__ShipToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the ship to account</description>
        <inlineHelpText>ID of the ship to account</inlineHelpText>
        <label>Ship To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DC Orders (Ship To)</relationshipLabel>
        <relationshipName>DCOrdersShipTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SingleTransactionAdjustment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether single transaction adjustment is in effect for the order</description>
        <inlineHelpText>Indicates whether single transaction adjustment is in effect for the order</inlineHelpText>
        <label>Single Transaction Adjustment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__SoldToAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the sold to account</description>
        <inlineHelpText>ID of the sold to account</inlineHelpText>
        <label>Sold To</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>DC Orders (Sold To)</relationshipLabel>
        <relationshipName>DCOrdersSoldTo</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Specifications__c</fullName>
        <description>Holds any specifications to be passed on to the collaborator.</description>
        <inlineHelpText>Holds any specifications to be passed on to the collaborator.</inlineHelpText>
        <label>Specifications</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__StartDate__c</fullName>
        <description>The date by which the child configuration should be started.</description>
        <inlineHelpText>The date by which the child configuration should be started.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Type__c</fullName>
        <description>The type of order</description>
        <inlineHelpText>The type of order</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Add On</fullName>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Subject__c</fullName>
        <description>CPQ-IQ-LC-10420: Used for Email Subject.</description>
        <formula>Apttus_Config2__ParentConfigurationId__r.Apttus_QPConfig__Proposald__r.Apttus_Proposal__Opportunity__r.Name+&apos; - &apos;+Apttus_Config2__ParentConfigurationId__r.Apttus_QPConfig__Proposald__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Email Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_URL__c</fullName>
        <description>CPQ-IQ-LC-10420: Used for Related Configuration URL.</description>
        <formula>LEFT($Api.Partner_Server_URL_260, FIND( &apos;/services&apos;, $Api.Partner_Server_URL_260))+&quot;&quot;+ Apttus_Config2__ParentBusinessObjectId__c</formula>
        <label>Quote URL</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quote_Owner__c</fullName>
        <description>CPQ-IQ-LC-10420: Used for Quote Owner Name.</description>
        <formula>Apttus_Config2__ParentConfigurationId__r.Apttus_QPConfig__Proposald__r.Owner:User.Full_User_Name__c</formula>
        <label>Quote Owner</label>
        <type>Text</type>
    </fields>
    <label>Collaboration Request</label>
    <listViews>
        <fullName>Apttus_Config2__All</fullName>
        <columns>NAME</columns>
        <columns>Apttus_Config2__StartDate__c</columns>
        <columns>Apttus_Config2__Priority__c</columns>
        <columns>Apttus_Config2__ParentConfigurationId__c</columns>
        <columns>Apttus_Config2__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR-{0000000000}</displayFormat>
        <label>Collaboration Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Collaboration Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>